[package]
authors = ["Victor Koenders <victor.koenders@gmail.com>"]
edition = "2018"
name = "bitlight_firmware"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
enc28j60 = "0.2.0"
panic-semihosting = "0.5.1"
ws2812b = { path = "libs/ws2812b" }

[dependencies.stm32f103xx-hal]
features = ["rt"]
git = "https://github.com/japaric/stm32f103xx-hal"
rev = "c9d9a86bcb4c493c72b6c5a805e2dd838e2e907f"
